--- a/sets/auricologia/stili_tsubo.css
+++ b/sets/auricologia/stili_tsubo.css
@@ -2,7 +2,8 @@
 /* CSS Document */
 
 
-#patologieTsubo{
+#patologieTsubo,
+#patologieTests{
 	margin-top:13px;
 	margin-bottom:13px;
     margin-right: -13px;
@@ -30,12 +31,14 @@
 #patologieTsubo.vis div:first-child{
 	background-image:url(../../img/frSuB.png) !important;
 }
-#patologieTsubo p{
+#patologieTsubo p,
+#patologieTests p{
 	margin-top:4px;
 	margin-bottom:4px;
 	cursor:pointer;
 }
-#patologieTsubo span{
+#patologieTsubo span,
+#patologieTests span{
 	display:inline-block;
 	line-height:20px;
 	height:22px;
@@ -43,7 +46,8 @@
 	border-radius:11px;
 	padding: 0px 10px;
 }
-#patologieTsubo span:hover{
+#patologieTsubo span:hover,
+#patologieTests span:hover{
 	background-color:rgba(0,0,0,0.2) !important;
 }
 
