--- a/css/menu.css
+++ b/css/menu.css
@@ -74,9 +74,9 @@ body:not(.smart) #icone.iconeEspanse{
 }
 #btns_set{
 	text-align:left;
-	display:inline;
+	display:inline-block;
 	width:auto !important;
-	height:auto !important;
+	/*height:auto !important;*/
 }
 .smart #icone div svg{
 	transform: rotate(-90deg);
@@ -320,7 +320,6 @@ body:not(.bodyStyled1):not(.bodyStyled2):not(.smart) #p_modello{
 }  
 body:not(.smart) #p_rifletti{ 
 	background-size: auto 30px !important;
-	background-position: 10px center !important;
 }
 #p_rifletti.btnSel{
 	background-image:url(../img/p_rifletti_sel.png) !important;
