Inserito sistema PWD per accesso a clienti e creata sezione settings archivi. Alcune correzioni testuali.

--- a/css/popup_colori.css
+++ b/css/popup_colori.css
@@ -108,6 +108,30 @@ body:not(.smart) #guida_generica #colSel{
 	padding-left:10px;
 	padding-right:10px;
 }
+#patientSel > span,
+#patientPwd > span{
+	width: calc(100% - 120px);
+    text-align: left;
+    padding-left: 10px;
+    display: inline-block;
+	vertical-align:top;
+	margin-right:-4px;
+}
+#patientPwd > span{
+	font-size: var(--font-11);
+}
+#patientSel > i,
+#patientPwd > i{
+    display: inline-block;
+	vertical-align:top;
+	width:120px;
+	margin-right:-4px;
+	text-align:right;
+}
+#patientSel > i{
+    min-height: 50px;
+    line-height: 50px;
+}
 .a_SEL{
 	background-color:rgba(0,0,0,0.7) !important;
 	color:#FFF;
