--- a/css/elenchi.css
+++ b/css/elenchi.css
@@ -64,7 +64,9 @@ body:not(.smart) #chiudiCliente:hover,
     background-image: url(../img/ico_quit4Over.png) !important;
 }
 body:not(.smart) #impostazioniSet,
-.smart #elenchi #impostazioniSet{
+.smart #elenchi #impostazioniSet,
+body:not(.smart) #impostazioniArchivi,
+.smart #elenchi #impostazioniArchivi{
 	float: right;
     display: inline-block;
     vertical-align: middle;
@@ -77,10 +79,15 @@ body:not(.smart) #impostazioniSet,
     cursor: pointer;
     opacity: 0.5;
 }
-.smart #elenchi #impostazioniSet{
+.smart #elenchi #impostazioniSet,
+.smart #elenchi #impostazioniArchivi{
 	background-size: auto 32px;
 	opacity:0.8;
 	margin-right:3px;
+}
+#elenchi #impostazioniArchivi{
+    margin-top: 4px;
+   	margin-right: -16px;
 }
 body:not(.smart) #help_set,
 .smart #elenchi #help_set,
@@ -124,8 +131,8 @@ body:not(.smart) #help_set,
 }
 #help_clienti,
 .smart #help_set{
-    margin-top: 6px;
-    margin-right: -13px;
+    margin-top: 11px;
+    /*margin-right: -13px;*/
 }
 .help_sets{
     margin-top: 0px;
@@ -468,9 +475,35 @@ body:not(.bodyStyled2) #chiudiElenco{
 	box-shadow: none !important;
 	min-height: 75px;
 }
-#lista_base > div, #lista_set > div{
+#lista_base > div,
+#lista_set > div{
 	display:none;
 }
+#requestPwd{
+	display:none;
+}
+#lista_base.noPwd > div:not(#requestPwd){
+	display:none !important;
+}
+#lista_base.noPwd div#requestPwd{
+	display:block !important;
+	padding:20px;
+}
+#patientPwdRequest{
+	width: calc(100% - 78px);
+    margin-top: 10px;
+    background-color: #FFF;
+    border-radius: 6px;
+    height: 30px;
+    line-height: 30px;
+    padding-left: 6px;
+    border: none;
+    box-shadow: 0px 0px 3px rgba(0,0,0,0.5);
+    margin-bottom: 4px;
+    margin-left: 10px;
+    margin-right: 5px;
+}
+
 .lista > div:not(.loading):not(.menuElenchi){
 	height:36px;
 	color:#000;
