--- a/css/popup_sets.css
+++ b/css/popup_sets.css
@@ -90,6 +90,7 @@ body:not(.smart) #sets{
 .lockedMap{
 	background-color:rgba(0,0,0,0.1) !important;
 	opacity:0.5;
+	cursor:default !important;
 }
 .lockedMap:hover{
 	background-color:rgba(0,0,0,0.2) !important;
@@ -108,310 +109,4 @@ body:not(.smart) #sets{
 }
 .smart #chiudi_sets{
 	background-size: auto;
-}
-
-/* SETS - CATALOGO */
-#elencoSets{
-	width:540px;
-	margin-left:-270px;
-}
-#labelSets{
-	background-image:url(../img/ico_mappa.png);
-}
-#setElenco{
-	display:inline-block;
-	vertical-align:top;
-	width:62px;
-	height: 400px;
-	overflow-y:auto;
-	padding-top:8px;
-	position:absolute;
-	z-index:1000;
-	text-align:right;
-}
-#setElenco > div{
-    color: #000;
-    cursor: pointer;
-    text-align: left;
-    background-repeat: no-repeat;
-    background-size: 40px;
-}
-@media (min-width: 541px){
-	
-	#contSets{
-		padding-top: 25px;
-		padding-bottom: 35px;
-		padding-right: 35px;
-		padding-left: 25px;
-	}
-	#setElenco{
-		overflow-y:auto;
-		padding-left: 4px;
-		margin-left: -4px;
-	}
-	#setElenco > div{
-		width: 50px;
-		height: 48px;
-		border-top: 1px solid rgba(0,0,0,0.1);
-    	margin-left: 8px;
-   		background-position: 2px center;
-	}
-	#setElenco > div:first-child{
-		border-top:none !important;
-	}
-	.setSel{
-		border-top: none !important;
-		border-top-left-radius: 8px;
-		border-bottom-left-radius: 8px;
-		width: 58px !important;
-		background-position: 10px center !important;
-		margin-left: 0px !important;
-	}
-}
-#setElenco > div:not(.setSel):hover{
-	background-color:rgba(0,0,0,0.05);
-}
-#setElenco > div i{
-	font-size: var(--font-12-1) !important;
-    line-height: 16px;
-}
-.setSel{
-	background-color: #FFF !important;
-	box-shadow: 0px 0px 4px rgba(0,0,0,0.5);
-}
-
-
-#setCont{
-	display:inline-block;
-	vertical-align:top;
-	width:420px;
-	height: 400px;
-	border-radius: 4px;
-	margin-left: 58px;
-}
-#setCont > div{
-    background-color: #FFF;
-    box-shadow: 0px 0px 5px rgba(0,0,0,0.5);
-    height: 400px;
-    background-position: calc(100% - 4px) 7px, left top;
-    background-repeat: no-repeat;
-    background-size: auto, auto 264px;
-    border-radius: 4px;
-	text-align:right;
-}
-.btnSet{
-	display:block;
-	padding-top:20px;
-	padding-right:20px;
-	text-align:right;
-	height:60px;
-}
-.btnSet .btn_invia{
-	margin:0px !important;
-}
-.costoSet .btn_info{
-    height: 30px;
-    line-height: 30px;
-    cursor: pointer;
-	background-image:url(../img/frDxB.png);
-	background-size:30px;
-	background-repeat:no-repeat;
-	background-position:right center;
-	padding-right:30px;
-}
-.costoSet .btn_acquistato{
-    height: 30px;
-    line-height: 30px;
-	font-style:italic;
-	background-image:url(../img/spunta.png);
-	background-position:left center;
-	background-repeat:no-repeat;
-	background-size:20px;
-	padding-left:20px;
-}
-#p_clients_full .costoSet .btn_acquistato{
-	background-image:url(../img/spuntaB.png);
-}
-.costoSet{
-	display:block;
-	padding-right:10px;
-	height:40px;
-}
-.costoSet b{
-	font-size: var(--font-24-2);
-	font-weight: normal;
-}
-.titSet{
-	display:block;
-	padding-top:80px;
-	padding-right:20px;
-	background-image: url(../img/devices.png);
-    background-repeat: no-repeat;
-    background-position: calc(100% - 19px) 25px;
-    background-size: auto 48px;
-}
-#p_clients_full .titSet{
-	background-image: url(../img/devicesB.png);
-}
-.titSet b{
-	font-size: var(--font-25);
-	font-weight: normal;
-	color: #1a4ba7;
-	text-shadow: 0px 0px 4px #fff;
-}
-.titSet i{
-	padding-right:5px;
-}
-#p_clients_full .titSet b,
-#p_clients_full .titSet i,
-#p_clients_full .btn_info,
-#p_clients_full .btn_acquistato{
-	color:#FFF !important;
-}
-#p_clients_full .titSet b,
-#p_clients_full .titSet i{
-	text-shadow:0px 0px 3px #000;
-}
-#p_clients_full .costoSet .btn_info{
-	background-image:url(../img/frDx.png);
-}
-.pubblSet{
-	float: right;
-    padding-top: 10px;
-    padding-right: 39px;
-	font-size: var(--font-12-1);
-	opacity:0.6;
-}
-.pubblSet i{
-	font-style:normal;
-	font-size: var(--font-11);
-	color:#999;
-}
-.txtSet{
-	display: block;
-    padding: 20px;
-    width: 100%;
-    background: #333;
-    color: #FFF;
-    margin-top: 20px;
-    height: 156px;
-	border-bottom-left-radius:4px;
-	border-bottom-right-radius:4px;
-	text-align:justify;
-	overflow-y:auto;
-}
-.txtSet *{
-    color: #FFF;
-}
-.imgSetDesc{
-	margin-left: 7px;
-    vertical-align: middle;
-    width: 29px;
-}
-#p_info > div{
-	padding:20px;
-	background-image: url(../sets/info/img/logoNero.png);
-    background-repeat: no-repeat;
-    background-position: right top;
-}
-#p_info > div h2{
-	text-align: left;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    color: #123f97;
-    font-size: var(--font-19-8);
-    font-weight: normal;
-}
-#p_info > div p{
-	text-align:justify;
-	margin-top:10px;
-	margin-bottom:0px;
-}
-
-#attivazioneForm input[type='text']::placeholder, 
-#attivazioneForm input[type='email']::placeholder{
-	opacity:1;
-	font-style:italic;
-}
-#attivazioneForm input[type='text'], 
-#attivazioneForm input[type='email']{
-	background-color:#737373 !important;
-	color:#FFF !important;
-}
-#attivazioneForm .btns{
-	text-align:right;
-}
-#imgsSets{
-	line-height:42px;
-	padding-bottom:10px;
-	padding-top:20px;
-	text-align:right !important;
-}
-#imgsSets img{
-	width: 38px;
-    padding: 2px;
-    background-color: #ffffff;
-    box-shadow: 0px 0px 3px rgba(0,0,0,0.5);
-    border-radius: 5px;
-    margin: 3px;
-    display: inline-block;
-    vertical-align: middle;
-	cursor:pointer;
-}
-.imgSetSel{
-    background-color: #ffC100 !important;
-}
-
-.setOpened{
-	padding:10px;
-    background-color: #CCC;
-    margin-right: -10px;
-    border-radius: 4px;
-}
-#contSets div.setOpened:hover{
-	box-shadow:none !important;
-}
-@media (max-width: 540px){
-	#elencoSets{
-		width:100%;
-		border-radius:0px !important;
-		margin-top: 0px !important;
-		top: 0px !important;
-		margin-left: 0px;
-   		left: 0px;
-	}
-	#setElenco{
-		overflow-x:auto;
-		overflow-y:hidden;
-		padding-top: 0px;
-		width: calc(100% - 20px);
-		height: 58px;
-		text-align: center !important;
-		padding-top: 4px;
-		margin-top: -4px;
-	}
-	#setCont{
-		margin-left: 0px;
-		margin-top: 54px;
-		width: 100%;
-	}
-	#setElenco > div{
-		display: inline-block;
-		width:48px;
-		height:46px;
-		border-left: 1px solid rgba(0,0,0,0.1);
-    	margin-top: 8px;
-   		background-position: center 2px;
-	}
-	#setElenco > div:first-child {
-		border-left: none !important;
-	}
-	.setSel{
-		border-left: none !important;
-		border-top-left-radius: 8px;
-		border-top-right-radius: 8px;
-		height: 56px !important;
-		background-position: center 10px !important;
-		margin-top: 0px !important;
-	}
 }
