--- a/css/schede.css
+++ b/css/schede.css
@@ -829,3 +829,23 @@ body:not(.bodyStyled2) #scheda_testo2{
 	padding-left:30px;
 	padding-right:30px;
 }
+
+
+.autore,
+.libro{
+	float:left;
+	margin-right:20px;
+}
+.autore{
+	width:100px;
+	border-radius:8px;
+	box-shadow:0px 0px 3px;
+}
+.libro{
+	width:150px;
+}
+.cont_libri{
+	border-bottom:1px solid rgba(0,0,0,0.2);
+	padding-bottom:15px;
+	margin-bottom:15px;
+}
