--- a/css/ambiente.css
+++ b/css/ambiente.css
@@ -271,14 +271,17 @@ body:not(.bodyModello).bodyStyled2{
     position: fixed;
     bottom: 0px;
     right: 0px;
-    width: 230px;
+    width: 197px;
     height: 75px;
     background: url(../img/logo_iaomai.png) no-repeat center center;
-    background-size: contain;
+    background-size: auto 75px;
     opacity: 0.7;	
 	z-index:1;
 	opacity:0;
-	display:none;
+	/*display:none;*/
+}
+body.bodyStyled2 #logoSovra{
+    background-image: url(../img/logo_iaomai_Fondino2.png) !important;
 }
 body:not(.bodyModello) #logoSovra{
 	display:none;
