--- a/css/modulo_pazienti.css
+++ b/css/modulo_pazienti.css
@@ -990,9 +990,11 @@ body:not(.smart) .listaProcedure{
     border-radius: 3px;
     padding: 15px !important;
     margin-bottom: 10px !important;
+    box-shadow: 0px 0px 3px rgb(0 0 0 / 50%);
+}
+html:not(.htmlStampa) #noteAnag{
     max-height: 100px;
     overflow-y: auto;
-    box-shadow: 0px 0px 3px rgb(0 0 0 / 50%);
 }
 .et{
 	width:100px;
