--- a/css/ambiente.css
+++ b/css/ambiente.css
@@ -320,7 +320,8 @@ body:not(.bodyModello) #logoSovra{
 
 
 #loader,
-#fotoBig{
+#fotoBig,
+#pdfBig{
 	display:block;
 	position:fixed;
 	top:0px;
@@ -341,7 +342,13 @@ body:not(.bodyModello) #logoSovra{
 	z-index:1000001;
 	opacity:1
 }
-#chiudiFotoBig{
+#pdfBig{
+	background-color: rgba(0,0,0,0.3);
+	z-index:1000001;
+	opacity:1
+}
+#chiudiFotoBig,
+#chiudiPdfBig{
 	position:fixed;
 	top:5px;
 	right:5px;
@@ -351,10 +358,31 @@ body:not(.bodyModello) #logoSovra{
 	background:url(../img/chMenuB.png) rgba(255,255,255,0.6) no-repeat center center;
 	background-size: 80%;
 	cursor:pointer;
-	z-index:1000002;
+	z-index:1000003;
 }
 #chiudiFotoBig:hover{
 	background-color:rgba(255,255,255,0.8) !important;
+}
+#chiudiPdfBig{
+	background-color:#FFF !important;
+}
+#frPdf{
+	position: fixed;
+    top: 31px;
+    left: 9px;
+    width: calc(100% - 18px);
+    height: calc(100% - 40px);
+    z-index: 1000002;
+    background-color: #FFF;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px #000;
+}
+.smart #frPdf{
+	top:0px !important;
+	left:0px !important;
+	width:100% !important;
+	height:100% !important;
 }
 #foto_alert{
 	display:none;
