--- a/css/forms.css
+++ b/css/forms.css
@@ -2367,6 +2367,9 @@ html:not(.htmlStampa) .contGallery{
 	margin-top: 121px;
 	cursor:pointer;
 }
+#contGalleryOnline .gall_del{
+	margin-top: 72px !important;
+}
 body:not(.touch) .contGallery > div:not(.noResults) > div img{
 	opacity:0.2;
 }
