--- a/css/menu.css
+++ b/css/menu.css
@@ -96,6 +96,9 @@ body:not(.smart) #icone.iconeEspanse{
 	background-position:center center;
 	cursor:pointer;
 }
+.bodyStampa #contBtnModello{
+	display:none !important;
+}
 .smart #icone div:not(#btns_set):not(#cartella_set){
 	width: 54px;
     height: 54px;
@@ -274,6 +277,9 @@ body:not(.bodyStyled1):not(.bodyStyled2):not(.smart) #p_sets{
 	background-color:rgba(0,0,0,0.1);
 	border-top-left-radius:6px;
 	border-bottom-left-radius:6px;
+}
+.bodyStampa #nav{
+	display:none !important;
 }
 #nav div{
 	display:block;
