--- a/css/forms.css
+++ b/css/forms.css
@@ -7,7 +7,7 @@ form{
 .smart #formMod{
 	padding-bottom: 20px;
 }
-.smart.android #formMod{
+body:not(.onlineVersion).smart.android #formMod{
 	padding-bottom: 270px;
 }
 ::-webkit-input-placeholder{
