--- a/css/modulo_pazienti.css
+++ b/css/modulo_pazienti.css
@@ -1092,6 +1092,10 @@ html:not(.htmlStampa) #noteAnag{
     width: calc(50% - 10px);
 	box-shadow: 0px 0px 2px rgba(0,0,0,0.6);
 }
+.contStampa .schMedica{
+	margin-left: 0px !important;
+    width: 100% !important;
+}
 .sch_Max600 .schMedica{
 	margin-left: 0px !important;
     width: 100% !important;
@@ -1158,6 +1162,9 @@ body:not(.smart) #modProc{
 .touch #modAnag:hover,
 .touch #modProc:hover{
     background-color: #184aa5 !important;
+}
+.contStampa #modAnag{
+	display:none !important;
 }
 #pazienti_stats table{
 	width:100%;
