--- a/css/elenchi.css
+++ b/css/elenchi.css
@@ -422,10 +422,10 @@ body:not(.bodyStyled2) #chiudiElenco{
 .separatorePulsanti{
 	display: block;
     width: calc(100% - 14px);
-    height: 2px;
+    height: 2px !important;
     margin: 7px;
-    background-color: rgba(0,0,0,0.2);
-    border-bottom: 1px solid rgba(255,255,2555,0.8);
+    background-color: rgba(0,0,0,0.2) !important;
+    border-bottom: 1px solid rgba(255,255,2555,0.8) !important;
 }
 #contImpset .separatorePulsanti{
     margin-top: -1px !important;	
