--- a/css/ambiente.css
+++ b/css/ambiente.css
@@ -355,7 +355,8 @@ body:not(.bodyModello) #logoSovra{
 	opacity:1
 }
 #chiudiFotoBig,
-#chiudiPdfBig{
+#chiudiPdfBig,
+#chiudiDebugBig{
 	position:fixed;
 	top:5px;
 	right:5px;
@@ -631,4 +632,34 @@ body:not(.bodyModello) #logoSovra{
 }
 .visNoConnDiv{
     display: block !important;
+}
+
+#cont_debug_db_cont{
+    display: none;
+}
+#cont_debug_db{
+	position:fixed;
+	z-index:100000000;
+	top:0px;
+	left:0px;
+	width:100%;
+	height:100%;
+	background-color:#FFF;
+	color:#000;
+	overflow-y:scroll;
+	-webkit-user-select: text !important;
+	-khtml-user-select: text !important;
+	-moz-user-select: text !important;
+	-ms-user-select: text !important;
+	user-select: text !important;
+}
+#cont_debug_db.loading{
+	background-image:url(../img/loadingBlack.gif) !important;
+	background-position: center center !important;
+    background-repeat: no-repeat !important;	
+	background-color:#000 !important;
+}
+#chiudiDebugBig{
+	z-index:100000001;
+	background:url(../img/chMenu.png) rgba(0,0,0,0.6) no-repeat center center !important;
 }
